--- a/.github/workflows/push-to-registry.yaml
+++ b/.github/workflows/push-to-registry.yaml
@@ -1,9 +1,8 @@
 name: Push image to DockerHub
 
 on:
-  push:
-    tags:
-      - "*"
+  release:
+    types: [created]
 
 jobs:
   build-and-publish-tag:
@@ -17,6 +16,8 @@ jobs:
         with:
           image: efejjota/concourse-autopilot
           registry: docker.io
-          addLatest: true
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: ${{ github.ref }}
+          buildArgs:
+          - RELEASE_TAG=${{ github.ref }}
