--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -1,4 +1,4 @@
-name: Release GO binaries
+name: Build and release
 
 on:
   push:
@@ -19,6 +19,11 @@ jobs:
             goos: darwin
     steps:
       - uses: actions/checkout@v2
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        tag_name: ${{ github.ref }}
+
       - uses: wangyoucao577/go-release-action@v1.20
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -28,3 +33,14 @@ jobs:
           binary_name: "autopilot"
           asset_name: ${BINARY_NAME}-${GOOS}-${GOARCH}
           release_tag: ${{ github.ref }}
+
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push Docker image
+        with:
+          image: efejjota/concourse-autopilot
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: ${{ github.ref }}
+          buildArgs:
+          - RELEASE_TAG=${{ github.ref }}
