Fix build and push docker image buildArgs

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -43,5 +43,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: ${{ github.ref }}
-          buildArgs:
-          - RELEASE_TAG=${{ github.ref }}
+          buildArgs: RELEASE_TAG=${{ github.ref }}
