--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+
     steps:
       - name: Create release
         uses: softprops/action-gh-release@v1
