Add required field runs_on to docker-build job

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -44,6 +44,8 @@ jobs:
   docker-build:
     name: Docker build
     needs: releases-matrix
+    runs-on: ubuntu-latest
+
     steps:
       - id: get_version
         uses: battila7/get-version-action@v2
